--- a/src/main/resources/com/example/bookclubdesktop/hello-view.fxml
+++ b/src/main/resources/com/example/bookclubdesktop/hello-view.fxml
@@ -1,16 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.VBox?>
 
-<?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.bookclubdesktop.HelloController">
+<VBox alignment="CENTER" prefHeight="545.0" prefWidth="855.0" spacing="20.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/19" fx:controller="com.example.bookclubdesktop.HelloController">
   <padding>
-    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
   </padding>
-
-  <Label fx:id="welcomeText"/>
-  <Button text="Hello!" onAction="#onHelloButtonClick"/>
+   <children>
+      <Button alignment="CENTER" layoutX="-100.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="309.0" text="Tiltás/ Tiltás visszavonása" />
+      <TableView prefHeight="200.0" prefWidth="200.0">
+        <columns>
+          <TableColumn prefWidth="248.0" text="nev" />
+          <TableColumn minWidth="0.0" prefWidth="101.0" text="nem" />
+            <TableColumn prefWidth="327.0" text="Születésnap" />
+            <TableColumn prefWidth="75.0" text="Kitiltva" />
+        </columns>
+      </TableView>
+   </children>
 </VBox>
